--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-	<script src="./pie-links.js"></script>
+	<script src="pie-links.js"></script>
 </head>
 <body>
 </body>
